--- a/Web-PS/inclusion.ukr.html
+++ b/Web-PS/inclusion.ukr.html
@@ -4,12 +4,12 @@
 <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
 <meta content="en-us" http-equiv="Content-Language"/>
 <title>inclusion UKR Regular - Web Font Specimen</title>
-<link rel="stylesheet" type="text/css" media="screen" href="inclusion.ukr.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="inclusion UKR.css" />
 <style type="text/css" media="screen">
 body { font-size: 42px; font-family: "inclusionUKR", Georgia; }
 </style>
 </head>
 <body>
-<p contenteditable="true">Червоний собака біг, аж підстрибував і вже там є, де їв. $123.45!</p>
+<p contenteditable="true">The quick brown fox jumps over the lazy dog. $123.45!</p>
 </body>
 </html>
